# Magpie

./: .gitignore  PLAN.md  README.md  ai.py  build_exe.ps1  hub.py  notify.py  pyproject.toml  run.bat  run.ps1  run_magpie.py  server.py
automations/: README.md  _helpers.py  capture_x_post.py
magpie/: __init__.py  __main__.py  ai.py  capture.py  default_config.json  freeaiagent_setup.py  hub.py  notify.py  ollama_setup.py  server.py  vault_io.py
magpie/web/: app.js  index.html  style.css
vault/AI-ML/LLM agents/: real-time-cv-defect-detection.md
vault/Finance/Quant/: quant-trading-idea.md
vault/Inbox/: tweet-by-eng-khairallah1.md  untitled-idea.md
web/: app.js  index.html
